Update ProxyDocumentsProvider.java